<resources>
    <string name="app_name">Materials Live Wallpaper</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_light_colors">Light Colors</string>

    <!-- MainActivity -->

    <string name="tips">
        Tips:
        \n- In settings, scroll down and tap on More Materials to download more materials or learn to create new ones.
        \n- Change Frame Rate Limit to save battery and fix system UI lags if there is any.
    </string>

    <string name="set_wallpaper_button">Set Wallpaper</string>
    <string name="settings_button">Settings</string>

    <!-- Toasts -->

    <string name="copy_successful">Copied to clipboard</string>
    <string name="copy_failed">Failed to copy</string>

    <string name="custom_material_imported">Custom material imported</string>
    <string name="custom_material_imported_target_version_not_supported">
        Custom material imported. The target version is not supported and the rendered wallpaper might not look like what you expect.
    </string>
    <string name="file_not_found">File not found</string>
    <string name="unzip_failed">Unzip failed</string>

    <!-- Settings Categories -->

    <string name="settings_category_material">Material</string>
    <string name="settings_category_performance">Performance</string>
    <string name="settings_category_lights">Lights</string>
    <string name="settings_category_more">More</string>

    <!-- Materials Settings -->

    <string name="settings_material_use_custom">Use Custom Material</string>
    <string name="settings_material_use_custom_summary_on">
        Use the imported custom material.
        Use Import Custom Material to import one.
    </string>
    <string name="settings_material_use_custom_summary_off">
        Use one of the samples as material.
        These samples use lightweight vector-art images just to show the possibilities.
        Custom materials are recommended.
    </string>
    <string name="settings_material_choose_sample">Choose Material Sample</string>
    <string name="settings_material_import_custom">Import Custom Material</string>
    <string name="settings_material_import_custom_summary">
        Import a custom material zip.
        For more info and some custom materials to download, scroll down and tap on More Materials.
    </string>

    <!-- Performance Settings -->

    <string name="settings_performance_fps_limit">Frame Rate Limit</string>
    <string name="settings_performance_max_additional_layers">Max Allowed Additional Layers</string>
    <string name="settings_performance_rotation_sensor_update_delay">Rotation Sensor Update Rate</string>
    <string name="settings_performance_rotation_sensor_smooth_out">Smooth Out Rotation Sensor Data</string>
    <string name="settings_performance_rotation_sensor_smooth_out_summary_on">
        Smooths it out when it\'s not being updated but adds a little delay (not noticeable at all! delay time = sensor update interval).
    </string>
    <string name="settings_performance_rotation_sensor_smooth_out_summary_off">
        Limited by sensor update rate but with no delay.
    </string>
    <string name="settings_performance_parallax">Parallax</string>
    <string name="settings_performance_parallax_summary">
        Requires a depth or a height map defined in the material.
    </string>
    <string name="settings_performance_viewer_for_reflections">Virtual Viewer for Reflections</string>
    <string name="settings_performance_viewer_for_reflections_summary_off">
        Light positions will be moved for reflections. This looks more natural and is recommended.
    </string>
    <string name="settings_performance_viewer_for_reflections_summary_on">
        This is not recommended.
        Viewing angle for reflections will be variable based on rotational differences, like parallax\'s changing viewing angle.
    </string>
    <string name="settings_performance_enable_fps_counter">Enable FPS Counter</string>

    <!-- Lights Settings -->

    <string name="settings_lights_positions">Light Positions</string>
    <string name="settings_lights_colors">Light Colors</string>
    <string name="settings_lights_colors_load_sample">Load a Sample</string>
    <string name="settings_lights_colors_count">Colors Count</string>
    <string name="settings_lights_colors_light_color_n">Light Color %1$d</string>
    <!-- samples in arrays.xml -->
    <string name="settings_lights_colors_intensity_notice">
        It\'s recommended to keep the intensity below 0.6 for all lights that are close together.
    </string>

    <string name="settings_lights_light_sensor">Use light sensor</string>
    <string name="settings_lights_light_sensor_max_light">Light sensor maximum light range</string>
    <string name="settings_lights_light_sensor_max_light_summary">
        Higher values result in less sensitive light adjustment.
    </string>
    <string name="settings_lights_light_sensor_min_brightness">Light sensor minimum brightness</string>
    <string name="settings_lights_light_sensor_min_brightness_summary">
        The minimum amount of brightness in the darkest environment.
    </string>

    <string name="settings_lights_auto_exposure">Automatically Set Exposure</string>
    <string name="settings_lights_auto_exposure_summary_on">
        Automatically sets exposure based on light sources to guarantee no overexposure (with the right materials).
        You may want to add some additional exposure with this enabled.
    </string>
    <string name="settings_lights_auto_exposure_summary_off">
        The exposure can be set manually using the Exposure slider.
    </string>
    <string name="settings_lights_exposure">Exposure</string>
    <string name="settings_lights_exposure_summary">
        Manual exposure
    </string>
    <string name="settings_lights_additional_exposure">Additional Exposure</string>

    <!-- More -->

    <string name="donate_button">Donate</string>
    <string name="more_materials_button">More Materials</string>
    <string name="app_version_title">App Version</string>
    <string name="app_version_loading">Getting version name…</string>
    <string name="materials_version_title">Latest Supported Custom Material Version</string>
    <string name="materials_version_loading">Getting version name…</string>
    <string name="privacy_policy_button">Privacy Policy</string>

    <!-- Light Source Preference -->

    <string name="light_source_preference_color_hue">Hue</string>
    <string name="light_source_preference_color_saturation">Saturation</string>
    <string name="light_source_preference_intensity">Light Intensity</string>
    <string name="light_source_preference_cancel_button">Cancel</string>
    <string name="light_source_preference_ok_button">OK</string>
</resources>
