<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_category_material">

        <SwitchPreferenceCompat
            app:key="use_custom_material"
            app:title="@string/settings_material_use_custom"
            app:summaryOn="@string/settings_material_use_custom_summary_on"
            app:summaryOff="@string/settings_material_use_custom_summary_off"
            app:enabled="false" />

        <ListPreference
            app:key="material_sample"
            app:title="@string/settings_material_choose_sample"
            app:defaultValue="brushed_tiles"
            app:entries="@array/settings_material_samples_entries"
            app:entryValues="@array/settings_material_samples_values"
            app:useSimpleSummaryProvider="true"
            app:enabled="false"/>

        <Preference
            app:key="import_custom_material"
            app:title="@string/settings_material_import_custom"
            app:enabled="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_lights">

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_performance">

        <ListPreference
            app:key="fps_limit"
            app:title="@string/settings_performance_fps_limit"
            app:defaultValue="none"
            app:entries="@array/settings_performance_fps_limit_entries"
            app:entryValues="@array/settings_performance_fps_limit_values"
            app:useSimpleSummaryProvider="true"
            app:enabled="false"/>

    </PreferenceCategory>

</PreferenceScreen>
