<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/color_hue_title"
        android:text="@string/light_source_preference_color_hue"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/color_hue_preview"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#000" />

    <SeekBar
        android:id="@+id/color_hue"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/color_saturation_title"
        android:text="@string/light_source_preference_color_saturation"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/color_saturation_preview"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#000" />

    <SeekBar
        android:id="@+id/color_saturation"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/intensity_title"
        android:text="@string/light_source_preference_intensity"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/intensity_preview"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#000" />

    <SeekBar
        android:id="@+id/intensity"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/light_source_preference_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/ok_button"
            android:text="@string/light_source_preference_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarPositiveButtonStyle" />

    </LinearLayout>

</LinearLayout>