<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/color_hue_title"
        android:text="@string/light_source_preference_color_hue"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/color_hue"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/color_saturation_title"
        android:text="@string/light_source_preference_color_saturation"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/color_saturation"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/intensity_title"
        android:text="@string/light_source_preference_intensity"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/intensity"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
