<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LightColorsActivity">

    <LinearLayout
        android:id="@+id/list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/load_sample"
            android:focusable="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/settings_lights_colors_load_sample"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/count"
            android:focusable="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/settings_lights_colors_count"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dynamic_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </LinearLayout>

        <TextView
            android:text="@string/settings_lights_colors_intensity_notice"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
